--- a/statistics.html
+++ b/statistics.html
@@ -71,7 +71,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698571404-principal-analyst-statistical-programming-r-d-'>Biogen Principal Analyst, Statistical Programming (R&D) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698571404-principal-analyst-statistical-programming-r-d-'>Biogen Principal Analyst, Statistical Programming (R&D) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -195,7 +195,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.welovegolang.com/jobs/back-end-software-engineer-5768301728759808'>Back-End software Engineer at Office for National Statistics - We Love Go</a></h5> 
+<h5><a href='https://www.welovegolang.com/jobs/back-end-software-engineer-5768301728759808'>Back-End software Engineer at Office for National Statistics - We Love Go</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -270,7 +270,7 @@ generate?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/jobs/1152500'>Statistical Programmer - Statistics & Data Corporation (SDC)</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/jobs/1152500'>Statistical Programmer - Statistics & Data Corporation (SDC)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... Produce statistical analyses, including generating analysis datasets, tables, 
 listings, and figures for clinical trials. Support Data Management in data set?...</p>
@@ -289,7 +289,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Los Angeles Los Angeles, CA, USA</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deltacollege.referrals.selectminds.com/jobs/adjunct-instructor-psychology-statistics-186'>Adjunct Instructor- Psychology  (Statistics) - San Joaquin Delta College Careers</a></h5> 
+<h5><a href='https://deltacollege.referrals.selectminds.com/jobs/adjunct-instructor-psychology-statistics-186'>Adjunct Instructor- Psychology  (Statistics) - San Joaquin Delta College Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -325,7 +325,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<h5><a href='https://jobs.hr.wisc.edu/en-us/job/503147/lecturer-in-statistics'>LECTURER IN STATISTICS at UW?Madison</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.hr.wisc.edu/en-us/job/503147/lecturer-in-statistics'>LECTURER IN STATISTICS at UW?Madison</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
